made a ton of changes

--- a/backup1.local/ansible/backup.yml
+++ b/backup1.local/ansible/backup.yml
@@ -3,7 +3,7 @@
   become: true
   tasks:
   - name: update apt cache
-    apt: upgrade=yes update_cache=yes cache_valid_time=86400
+    apt: update_cache=yes cache_valid_time=86400
   roles:
     - role: backup
     - role: mysql
