--- a/mysql1.local/Vagrantfile
+++ b/mysql1.local/Vagrantfile
@@ -15,6 +15,7 @@ Vagrant.configure("2") do |config|
     mysql1.vm.provision "ansible_local" do |ansible|
       ansible.verbose = "v"
       ansible.playbook = "ansible/mysql.yml"
+      ansible.inventory_path = "ansible/dev"
     end
   end
 end
